# RK2

./: CMakeLists.txt
.github/workflows/: build.yml
include/: Color.h  House.h  Theme.h
src/: House.cpp  Theme.cpp  main.cpp
tests/: CMakeLists.txt  test_Color.cpp  test_House.cpp  test_Theme.cpp
